# cppmatrix

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_test.sh
src/: matrix.h  matrix_operations.h
tests/: CMakeLists.txt  test_matrix.cpp
